userinfo routes were updated
