# internal/business/delivery/http/user.go
@@ -6,7 +6,6 @@ import (
 	"fmt"
 	"net/http"
 	"os"
-	"strconv"
 	"strings"
 
 	"github.com/gin-gonic/gin"
@@ -28,11 +27,12 @@ func NewUserHandler(Impl business.UserUseCase) *UserHandler {
 
 // signRequest - structure that is sent to sign-in/up url
 type userInfo struct {
-	ID          int    `json:"id"`
-	Login       string `json:"login"`
-	FullName    string `json:"fullName"`
-	Sex         string `json:"sex"`
-	DateOfBirth string `json:"dateOfBirth"`
+	Login              string `json:"login"`              // login - user login
+	FullName           string `json:"fullName"`           // fullName - user fullName
+	Sex                string `json:"sex"`                // sex - user sex
+	DateOfBirth        string `json:"dateOfBirth"`        // dateOfBirth - user date of birth
+	ChangeProfilePhoto string `json:"changeProfilePhoto"` // changeProfilePhoto = {"yes" - change, "no" - pass}
+	ProfilePhoto       string `json:"profilephoto"`       // profilephoto - user profile photo file. If you don't want to change profile photo send current profilephoto filename
 }
 
 // RegisterUser registers userinfo handlers
@@ -56,6 +56,170 @@ func (UserHandler *UserHandler) RegisterUser(groupname string, router *gin.Route
 
 }
 
+const (
+	internalServerError string = "Oops something went wrong"
+	userInfoWasSet      string = "The user information was set"
+)
+
+// @Summary SetUserInfo
+// @Security ApiKeyAuth
+// @Tags safe
+// @Description SetUserInfo sets user information
+// @Accept  mpfd
+// @Produce  json
+// @Param input body userInfo true "account info"
+// @Success 200 {string} message "the user information was set"
+// @Failure 400 {string} error "Bad Request"
+// @Failure 401 {string} error "Unauthorized!!"
+// @Failure 500 {string} error "Oops something went wrong"
+// @Router /safe/business/setUserInfo [put]
+// SetUserInfo sets user information
+func (userHandler *UserHandler) SetUserInfo(c *gin.Context) {
+	id, exist := geId(c)
+	if !exist {
+		c.JSON(http.StatusBadRequest, "the id doesn't exist")
+		c.Abort()
+		return
+
+	}
+
+	fmt.Println("id ==", id)
+
+	input := new(userInfo)
+
+	input.Login = c.PostForm("login")
+	input.FullName = c.PostForm("fullName")
+	input.Sex = c.PostForm("sex")
+	input.DateOfBirth = c.PostForm("dateOfBirth")
+	input.ChangeProfilePhoto = c.PostForm("changeProfilePhoto")
+
+	if input.ChangeProfilePhoto == "yes" {
+		file, err := c.FormFile("profilephoto") // single file
+		if err != nil {
+			c.JSON(http.StatusBadRequest, err.Error())
+			c.Abort()
+			return
+		}
+
+		fmt.Println("file.Filename = ", file.Filename)
+
+		expansion := strings.Split(file.Filename, ".")[1]
+
+		file.Filename = fmt.Sprint(id) + "." + expansion
+
+		dst := "files/users_photo/"
+
+		input.ProfilePhoto = file.Filename
+		// Upload the file to specific dst.
+		fmt.Println("c.SaveUploadedFile(file, dst) ==> ", c.SaveUploadedFile(file, dst+file.Filename))
+	} else {
+		input.ProfilePhoto = c.PostForm("profilephoto")
+	}
+
+	fmt.Println("input ==>", input, "id =", id)
+
+	err := userHandler.Impl.SetUserInfo(toModelsUser(input, id))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err.Error())
+		c.Abort()
+		return
+	}
+
+	c.JSON(http.StatusOK, userInfoWasSet)
+}
+
+// @Summary GetUserInfo
+// @Security ApiKeyAuth
+// @Tags safe
+// @Description GetUserInfo gets user information
+// @Produce  json
+// @Success 200 {string} message "the user information was set"
+// @Failure 400 {string} error "Bad Request"
+// @Failure 401 {string} error "Unauthorized!!"
+// @Failure 500 {string} error "Oops something went wrong"
+// @Router /safe/business/getUserInfo [get]
+// GetUserInfo gets user information
+func (userHandler *UserHandler) GetUserInfo(c *gin.Context) {
+
+	id, exist := geId(c)
+	if !exist {
+		c.JSON(http.StatusBadRequest, "the id doesn't exist")
+		c.Abort()
+		return
+	}
+
+	userInfo, err := userHandler.Impl.GetUserInfo(id)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err.Error())
+		c.Abort()
+		return
+	}
+	c.JSON(http.StatusOK, userInfo)
+}
+
+// @Summary GetUserProfilePhoto
+// @Security ApiKeyAuth
+// @Tags safe
+// @Description GetUserProfilePhoto gets user profile photo
+// @Produce  mpfd
+// @Success 200 {string} message "file"
+// @Failure 400 {string} error "Bad Request"
+// @Failure 401 {string} error "Unauthorized!!"
+// @Failure 500 {string} error "Oops something went wrong"
+// @Router /safe/business/getUserProfilePhoto [get]
+// GetUserProfilePhoto gets user profile photo
+func (userHandler *UserHandler) GetUserProfilePhoto(c *gin.Context) {
+
+	id, exist := geId(c)
+	if !exist {
+		c.JSON(http.StatusBadRequest, "the id doesn't exist")
+		c.Abort()
+		return
+	}
+
+	filename, err := userHandler.Impl.GetUserPhoto(id)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, "empty profile")
+		// c.Status(http.StatusBadRequest)
+		fmt.Println("error == :", err)
+		c.Abort()
+		return
+	}
+
+	if *filename == "" {
+		c.JSON(http.StatusBadRequest, "empty profile")
+		// c.Status(http.StatusBadRequest)
+		fmt.Println("error == : empty profile")
+		c.Abort()
+		return
+	}
+	path := "files/users_photo/" + *filename
+	if _, err = os.Stat(path); os.IsNotExist(err) {
+		// path/to/whatever does not exist
+		fmt.Println("profile photo does not exist")
+		c.JSON(http.StatusBadRequest, "empty profile")
+		c.Abort()
+		return
+	}
+	c.File(path)
+	c.Status(http.StatusOK)
+}
+
+func toSetUserInfo(u *models.UsersInfo) *userInfo {
+	return &userInfo{}
+}
+
+func toModelsUser(u *userInfo, id int) *models.UsersInfo {
+	return &models.UsersInfo{
+		ID:           id,
+		Login:        u.Login,
+		FullName:     u.FullName,
+		Sex:          u.Sex,
+		DateOfBirth:  u.DateOfBirth,
+		ProfilePhoto: u.ProfilePhoto,
+	}
+}
+
 // @Summary test
 // @Security ApiKeyAuth
 // @Tags safe
@@ -70,113 +234,8 @@ func test(c *gin.Context) {
 	c.JSON(200, "hello")
 }
 
-// SetUserInfo sets user information
-func (userHandler *UserHandler) SetUserInfo(c *gin.Context) {
-	input := new(userInfo)
-
-	id, err := strconv.Atoi(c.PostForm("id"))
-	if err != nil {
-		c.AbortWithStatus(http.StatusBadRequest)
-		return
-	}
-
-	input.ID = id
-	input.Login = c.PostForm("login")
-	input.FullName = c.PostForm("fullname")
-	input.Sex = c.PostForm("sex")
-	input.DateOfBirth = c.PostForm("dateofbirth")
-	// single file
-	file, _ := c.FormFile("file")
-	fmt.Println("file.Filename = ", file.Filename)
-
-	expansion := strings.Split(file.Filename, ".")[1]
-	file.Filename = fmt.Sprint(input.ID) + "." + expansion
-
-	dst := "files/users_photo/"
-
-	// Upload the file to specific dst.
-	fmt.Println("c.SaveUploadedFile(file, dst) ==> ", c.SaveUploadedFile(file, dst+file.Filename))
-	fmt.Println("input =", input)
-
-	err = userHandler.Impl.SetUserInfo(toModelsUser(input, file.Filename))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-		c.Abort()
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"status": "the user information was set",
-	})
-	c.Status(http.StatusOK)
-}
-
-// GetUserInfo gets user information
-func (userHandler *UserHandler) GetUserInfo(c *gin.Context) {
-
-	id, _ := c.Get("user")
-
-	userInfo, err := userHandler.Impl.GetUserInfo(id.(int))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-		c.Abort()
-		return
-	}
-	c.JSON(http.StatusOK, userInfo)
-	c.Status(http.StatusOK)
-}
-
-// GetUserInfo gets user information
-func (userHandler *UserHandler) GetUserProfilePhoto(c *gin.Context) {
-
-	id, _ := c.Get("user")
-
-	filename, err := userHandler.Impl.GetUserPhoto(id.(int))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "empty profile",
-		})
-		// c.Status(http.StatusBadRequest)
-		fmt.Println("error == :", err)
-		return
-	}
-
-	if *filename == "" {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "empty profile",
-		})
-		// c.Status(http.StatusBadRequest)
-		fmt.Println("error == : empty profile")
-		return
-	}
-	path := "files/users_photo/" + *filename
-	if _, err = os.Stat(path); os.IsNotExist(err) {
-		// path/to/whatever does not exist
-		fmt.Println("profile photo does not exist")
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "empty profile",
-		})
-		return
-	}
-	c.File(path)
-	c.Status(http.StatusOK)
-}
-
-func toSetUserInfo(u *models.UsersInfo) *userInfo {
-	return &userInfo{}
-}
-
-func toModelsUser(u *userInfo, profilePhoto string) *models.UsersInfo {
-	return &models.UsersInfo{
-		ID:           u.ID,
-		Login:        u.Login,
-		FullName:     u.FullName,
-		Sex:          u.Sex,
-		DateOfBirth:  u.DateOfBirth,
-		ProfilePhoto: profilePhoto,
-	}
+func geId(c *gin.Context) (id int, exist bool) {
+	idstr, exist := c.Get("user")
+	id = idstr.(int)
+	return
 }
